[gd_scene load_steps=4 format=2]

[ext_resource path="res://juego2/envioronment/board.png" type="Texture" id=1]
[ext_resource path="res://juego2/scenes/board.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.5, 52.375 )

[node name="board" type="Node2D"]
position = Vector2( -12.957, -9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="img_board" type="Sprite" parent="."]
position = Vector2( 399, 195 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="00" type="Area2D" parent="."]
position = Vector2( 243, 34 )

[node name="click_area" type="CollisionShape2D" parent="00"]
position = Vector2( 35, 40 )
shape = SubResource( 1 )

[node name="01" type="Area2D" parent="."]
position = Vector2( 243, 34 )

[node name="click_area" type="CollisionShape2D" parent="01"]
position = Vector2( 34, 160.75 )
shape = SubResource( 1 )

[node name="02" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="02"]
position = Vector2( 34, 34 )
shape = SubResource( 1 )

[node name="10" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="10"]
position = Vector2( 157, -207 )
shape = SubResource( 1 )

[node name="12" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="12"]
position = Vector2( 158, -89 )
shape = SubResource( 1 )

[node name="13" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="13"]
position = Vector2( 157, 33 )
shape = SubResource( 1 )

[node name="20" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="20"]
position = Vector2( 281, -207 )
shape = SubResource( 1 )

[node name="21" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="21"]
position = Vector2( 282, -87 )
shape = SubResource( 1 )

[node name="22" type="Area2D" parent="."]
position = Vector2( 242, 283 )

[node name="click_area" type="CollisionShape2D" parent="22"]
position = Vector2( 281, 33 )
shape = SubResource( 1 )

[connection signal="input_event" from="00" to="." method="_on_00_input_event"]
[connection signal="input_event" from="01" to="." method="_on_01_input_event"]
[connection signal="input_event" from="02" to="." method="_on_02_input_event"]
[connection signal="input_event" from="10" to="." method="_on_10_input_event"]
[connection signal="input_event" from="12" to="." method="_on_12_input_event"]
[connection signal="input_event" from="13" to="." method="_on_13_input_event"]
[connection signal="input_event" from="20" to="." method="_on_20_input_event"]
[connection signal="input_event" from="21" to="." method="_on_21_input_event"]
[connection signal="input_event" from="22" to="." method="_on_22_input_event"]
